--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.1.1",
-    "jade": "*",
-    "hjs": "*",
-    "nodemailer" : "latest"
+      "express": "3.1.1"
+    , "jade": "*"
+    , "hjs": "*"
+    , "nodemailer" : "latest"
+    , "connect-redis": "latest"
+    , "bcrypt": "latest"
+    , "imagemagick": "latest"
+    , "mongodb": "latest"
+    , "mongoskin": "latest"
+    , "backbone": "latest"
+    , "underscore": "latest"
   }
 }
