fixed images not scaling beyond 1600px

--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     , "mongoskin": "latest"
     , "backbone": "latest"
     , "underscore": "latest"
+    , "mocha": "latest"
+    , "testem": "latest"
   }
 }
