--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.1.1",
-    "jade": "*",
-    "hjs": "*",
-    "nodemailer": "latest",
-    "connect-redis": "latest",
-    "bcrypt": "latest",
-    "imagemagick": "latest",
-    "mongodb": "latest",
-    "mongoskin": "latest",
-    "backbone": "latest",
-    "underscore": "latest",
-    "mocha": "latest",
-    "testem": "latest",
-    "prerender-node": "0.0.7"
+    "backbone": "^1.2.3",
+    "bcrypt": "^0.8.5",
+    "connect-redis": "^3.0.1",
+    "express": "^3.1.1",
+    "express-session": "^1.11.3",
+    "hjs": "0.0.6",
+    "imagemagick": "^0.1.3",
+    "jade": "^1.11.0",
+    "mongodb": "^2.0.46",
+    "mongoskin": "^2.0.3",
+    "nodemailer": "^1.8.0",
+    "prerender-node": "0.0.7",
+    "underscore": "^1.8.3"
   }
 }
