done updating specs and manuals

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nodemailer": "^1.8.0",
     "prerender-node": "0.0.7",
     "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "node": "4.2.1"
   }
 }
